# numericoptupr

./: CMakeLists.txt
mathutils/: CMakeLists.txt
mathutils/include/: functions.hpp  integrator.hpp  interpolation.hpp  linalg.hpp  vector.hpp
mathutils/src/: functions.cpp  interpolation.cpp  linalg.cpp
task1/: CMakeLists.txt
task1/include/: solution.hpp  window.hpp
task1/src/: main.cpp  solution.cpp  window.cpp
task2/: CMakeLists.txt
task2/src/: main.cpp
task3/: CMakeLists.txt
task3/src/: main.cpp
